crates/validation-tests/tests/snapshots/transition_tests__live_last_pub_id_is_larger_then_current_pub_id.snap
---
source: crates/validation/tests/transition_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/collections/the~1collection,
        error: current publication ID 2020202020202020 has been superseded by a larger last_pub_id 9090909090909090 of the spec; please retry the operation,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/the~1derivation,
        error: current publication ID 2020202020202020 has been superseded by a larger last_pub_id 9090909090909090 of the spec; please retry the operation,
    },
    Error {
        scope: test://example/catalog.yaml#/tests/the~1test,
        error: current publication ID 2020202020202020 has been superseded by a larger last_pub_id 9090909090909090 of the spec; please retry the operation,
    },
    Error {
        scope: test://example/catalog.yaml#/captures/the~1capture,
        error: current publication ID 2020202020202020 has been superseded by a larger last_pub_id 9090909090909090 of the spec; please retry the operation,
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/the~1materialization,
        error: current publication ID 2020202020202020 has been superseded by a larger last_pub_id 9090909090909090 of the spec; please retry the operation,
    },
]
